[tool.poetry]
name = "aws-infra-graph"
version = "0.1.5"
description = "Tool for visualizing AWS CloudFormation Import/Exports and displaying a dependency graph"
authors = ["Michael Ludwig"]
readme = "./README.md"
repository = "https://github.com/ludwigm/infrastructure-graph"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.12.35"
click = "^7.1.1"
boto3-type-annotations-with-docs = "^0.3.1"
graphviz = "^0.13.2"
jmespath = "^0.9.5"
colorama = "^0.4.3"
pyhocon = "^0.3.54"
pydantic = "^1.4"
coloredlogs = "^14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyexpect = "^1.0.20"
pytest-mocha = "^0.4.0"
nox = "^2020.5.24"
black = "^19.10b0"
pytest-black = "^0.3.10"
coverage = "^5.2"
pytest-cov = "^2.10.0"
pytest-env = "^0.6.2"
pytest-flake8 = "^1.0.6"
pytest-mccabe = "^1.0"
pytest-mypy = "^0.6.2"

[tool.poetry.scripts]
infra-graph = "aws_infra_graph.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
