[tool.poetry]
name = "aws-infra-graph"
version = "0.1.5"
description = "Tool for visualizing AWS CloudFormation Import/Exports and displaying a dependency graph"
authors = ["Michael Ludwig"]
readme = "./README.md"
repository = "https://github.com/ludwigm/infrastructure-graph"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.12.35"
click = "^7.1.1"
boto3-type-annotations-with-docs = "^0.3.1"
graphviz = "^0.13.2"
jmespath = "^0.9.5"
colorama = "^0.4.3"
pyhocon = "^0.3.54"
pydantic = "^1.4"
coloredlogs = "^14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyexpect = "^1.0.20"
pytest-mocha = "^0.4.0"
nox = "^2020.5.24"
black = "^19.10b0"
pytest-black = "^0.3.10"
coverage = "^5.2"
pytest-cov = "^2.10.0"
pytest-env = "^0.6.2"
pytest-flake8 = "^1.0.6"
pytest-mccabe = "^1.0"
pytest-mypy = "^0.6.2"
flake8-annotations-complexity = "^0.0.5"
flake8-cognitive-complexity = "^0.1.0"
flake8-expression-complexity = "^0.0.8"
flake8-blind-except = "^0.1.1"
flake8-functions = "^0.0.4"
flake8-builtins = "^1.5.3"
flake8-isort = "^4.0.0"
flake8-mock = "^0.3"
flake8_implicit_str_concat = "^0.1.0"
flake8-requirements = "^1.3.2"
flake8-variables-names = "^0.0.3"
pep8-naming = "^0.11.1"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"
flake8-breakpoint = "^1.1.0"
flake8-print = "^3.1.4"
flake8-eradicate = "^0.4.0"
flake8-comprehensions = "^3.2.3"
flake8-raise = "^0.0.5"
flake8-pathlib = "^0.1.3"
flake8-colors = "^0.1.6"

[tool.poetry.scripts]
infra-graph = "aws_infra_graph.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
